// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchFromUri() returns correct response for GET request to a valid uri 1`] = `
Object {
  "access_token": "no_access_token_provided",
  "headers": Object {
    "data": "default sample headers",
  },
  "params": Object {
    "data": "default sample params",
  },
  "title": "sample mocked data for GET request to http://example.org/valid/endpoint",
}
`;

exports[`fetchFromUri() returns correct response for GET request to uri containing regional characters 1`] = `
Object {
  "access_token": "no_access_token_provided",
  "headers": Object {
    "data": "default sample headers",
  },
  "params": Object {
    "data": "default sample params",
  },
  "title": "sample mocked data for GET request to http://%C4%99x%C4%85mple.org/za%C5%BC%C3%B3%C5%82%C4%87g%C4%99%C5%9Bl%C4%85ja%C5%BA%C5%84/%D0%B3%D0%BE%D1%80%D0%B4%D1%83%D0%BD%D0%BD%D0%B8/%EC%A2%8B%EC%9D%80%EA%B2%BD%EA%B8%B0",
}
`;

exports[`fetchFromUri() returns correct response for GET request with headers to a valid uri  1`] = `
Object {
  "access_token": "no_access_token_provided",
  "headers": Object {
    "data": "sample headers",
  },
  "params": Object {
    "data": "default sample params",
  },
  "title": "sample mocked data for GET request to http://example.org/valid/endpoint",
}
`;

exports[`fetchFromUri() returns correct response for GET request with params to a valid uri  1`] = `
Object {
  "access_token": "no_access_token_provided",
  "headers": Object {
    "data": "default sample headers",
  },
  "params": Object {
    "data": "custom params",
  },
  "title": "sample mocked data for GET request to http://example.org/valid/endpoint",
}
`;

exports[`fetchFromUri() returns correct response for POST request to a valid uri 1`] = `
Object {
  "access_token": "no_access_token_provided",
  "headers": Object {
    "data": "default sample headers",
  },
  "params": Object {
    "data": "default sample params",
  },
  "title": "sample mocked data for POST request to http://example.org/valid/endpoint",
}
`;
